# TRS-v2.0-Evidence-Based-Tracheostomy-Risk-Score-for-Liver-Transplant-Recipients

./: FIGURES_CATALOG.md  LICENSE  README.md  TABLES_CATALOG.md  pyproject.toml
Data/: Cut Points.xlsx  EL_09.xlsx  PDT_EA_AB.xlsx
manuscripts/: Complete Supplementary Materials for _Evidence-Based Timing of Tracheostomy in Liver Transplant Recipients_.md  Evidence-Based Timing of Tracheostomy in Liver Transplant Recipients_ A Landmark Analysis with Bootstrap Validation.md  Supplementary Methods. Detailed Statistical Methodology and Software Specifications.md  Supplementary Table S1. Detailed TRS Calculation Methodology and Scoring System.md  Supplementary Table S2. Complete Univariate Analysis Results for All Candidate Variables.md  Supplementary Table S3. Bootstrap Validation Results with Bias-Corrected Performance Estimates.md  🎯 TRS v2.0 Final Punch-List Completion Report.md
src/: __init__.py  constants.py  core.py  test_comprehensive_trs.py
src/plotting/: plot_calibration_CLEAN.py  plot_dca_corrected.py  plot_km_corrected.py  plot_roc_matrix_CLEAN.py  plot_time_roc_corrected.py
